tests/paczka1/fuzzy1/41408495.err
Error in line 8: kuo7nn20 S347 19,1
Error in line 19: aeVLsRo A230 357,5
Error in line 16: kuo7nn20 A464 59,2
Error in line 31: pB2xwjwqjU S347 9,6
Error in line 35: pB2xwjwqjU A230 48,9
